# itmo-ctd-se-lab2

./: lab1.cabal  shell.nix  stack.yaml
app/: Main.hs
src/: Twitter.hs
src/Twitter/: API.hs  OAuth.hs  Utils.hs
src/Twitter/API/: Conduit.hs
test/: Spec.hs  Test.hs
test/Test/: Twitter.hs
test/Test/Twitter/: APISpec.hs
